# NeonPrime

./: .gitignore  Cargo.toml  LICENSE  NeonPrime-3.0.0-Setup.wixpdb  README.md  build-installer.ps1  build.rs  publish-sensors.ps1
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: dump_microwin.rs  render_icon.rs
installer/: NeonPrime.wxs
packaging/winget/manifests/a/ABowlOfEleven/NeonPrime/3.0.1/: ABowlOfEleven.NeonPrime.installer.yaml  ABowlOfEleven.NeonPrime.locale.en-US.yaml  ABowlOfEleven.NeonPrime.yaml
profile/: NeonPrime.profile.ps1  install-profile.ps1
sandbox/: README.md  build-sandbox.ps1  neonprime.wsb
sensors/: NeonPrime.Sensors.csproj  Program.cs
src/: cputemp.rs  gpu.rs  lib.rs  main.rs  sensors.rs  telemetry.rs
src/core/: action.rs  cleanup.rs  config.rs  debloat.rs  dns.rs  engine.rs  features.rs  firewall.rs  installs.rs  ipc.rs  journal.rs  microwin.rs  mod.rs  modes.rs  netmon.rs  power.rs  privacy.rs  procmon.rs  quick.rs  registry.rs  repair.rs  services.rs  session.rs  settings.rs  startup.rs  tweaks.rs
tests/: broker.rs
ui/: app.slint
