[package]
name = "neonprime"
version = "3.0.1"
edition = "2021"
description = "A holographic system control deck for Windows. One machine, three modes. It counts all the way to three."
authors = ["NeonPrime contributors"]
license = "MIT"

[dependencies]
slint = "1"
sysinfo = "0.33"
nvml-wrapper = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
single-instance = "0.3"
toml = "0.8"
winreg = "0.52"
wmi = "0.14"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Performance",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
]

[build-dependencies]
slint-build = "1"
winresource = "0.1"

# Dev-only: rasterize SVG icons to PNG so they can be previewed during design.
[dev-dependencies]
resvg = "0.47"
